@@ -1,11 +1,8 @@
-/* --- this is basically a copy from  the code in  CRAN package actuar's
- * src/util.c  (by Vincent Goulet)
- * with slight shortcuts by Martin Maechler: */
-
-/* Power of a matrix x^k := x x ... x, where x in an (n x n) matrix
- * and k is an *integer* (including -1). This function is fairly naive
- * with little error checking since it is currently used in a very
- * narrow and already controlled context.
+/*
+ *  Power of a matrix x^k := x x ... x, where x in an (n x n) matrix
+ *  and k is an *integer*. Based on code originally written by Vincent
+ *  Goulet for package actuar (and inspired from Octave in file
+ *  .../src/xpow.cc) with slight shortcuts by Martin Maechler:
  */
 
 #include "matpow.h"
@@ -13,41 +10,42 @@
 /* .Call() this from R : */
 SEXP R_matpow(SEXP x, SEXP k)
 {
-    if(!isMatrix(x))
+    if (!isMatrix(x))
 	error(_("not a matrix"));
-    else {
-	SEXP dims = getAttrib(x, R_DimSymbol), z;
-	int n = INTEGER(dims)[0],
-	    kk = INTEGER(k)[0]; /* need copy, as it is altered in matpow() */
 
-	if(!isNumeric(x))
-	    PROTECT(x = coerceVector(x, REALSXP)); /* may give error,...*/
-	else
-	    PROTECT(x = duplicate(x)); /* since matpow() will alter it */
+    SEXP dims = getAttrib(x, R_DimSymbol), z;
+    int n = INTEGER(dims)[0],
+	ktmp = INTEGER(k)[0]; /* need copy, as it is altered in matpow() */
 
-	if (n != INTEGER(dims)[1]) {
-	    UNPROTECT(1);
-	    error(_("non-square matrix"));
-	}
-	if (n == 0)
-	    return(allocMatrix(REALSXP, 0, 0));
+/*     if (!isNumeric(x)) */
+/* 	PROTECT(x = coerceVector(x, REALSXP)); /\* may give error... *\/ */
+/*     else */
+/* 	PROTECT(x = duplicate(x)); /\* since matpow() will alter it *\/ */
 
-	PROTECT(z = allocMatrix(REALSXP, n, n));
-	setAttrib(z, R_DimNamesSymbol,
-		  getAttrib(x, R_DimNamesSymbol));
+    PROTECT(x = coerceVector(x, REALSXP)); /* coercion to numeric */
 
-	matpow(REAL(x), n, kk, REAL(z));
-
-	UNPROTECT(2);
-	return z;
+    if (n != INTEGER(dims)[1]) {
+	UNPROTECT(1);
+	error(_("non-square matrix"));
     }
+    if (n == 0)
+	return(allocMatrix(REALSXP, 0, 0));
+
+    PROTECT(z = allocMatrix(REALSXP, n, n));
+    setAttrib(z, R_DimNamesSymbol,
+	      getAttrib(x, R_DimNamesSymbol));
+
+    matpow(REAL(x), n, ktmp, REAL(z));
+
+    UNPROTECT(2);
+    return z;
 }
 
+/* Compute z := x %^% k, x an (n x n) square "matrix" in column-order;
+ * NB: x will be altered! The caller must make a copy if needed */
 void matpow(double *x, int n, int k, double *z)
-/* Compute  z :=  x %^% k ;  x an (n x n) square "matrix" in column-order;
- * NB: x[] will be altered !! --- the caller must make a copy if needed */
 {
-    if (k == 0) { /* Return identity matrix */
+    if (k == 0) { /* return identity matrix */
 	int i, j;
 	for (i = 0; i < n; i++)
 	    for (j = 0; j < n; j++)
@@ -55,11 +53,9 @@ void matpow(double *x, int n, int k, double *z)
 	return;
     }
     else if (k < 0) {
-
-	REprintf("If you *REALLY* need <matrix> ^ (-n), use (m^n)^(-1) yourself!");
+	error(_("power must be a positive integer"));
     }
     else { /* k >= 1 */
-
 	static const char *transa = "N";
 	static const double one = 1.0, zero = 0.0;
 	int nSqr = n * n;
@@ -69,7 +65,7 @@ void matpow(double *x, int n, int k, double *z)
 	/* Take powers in multiples of 2 until there is only one
 	 * product left to make. That is, if k = 5, compute (x * x),
 	 * then ((x * x) * (x * x)) and finally ((x * x) * (x * x)) *
-	 * x. Idea taken from Octave in file .../src/xpow.cc. */
+	 * x. */
 	Memcpy(z, x, (size_t) nSqr);
 
 	k--;
@@ -81,7 +77,7 @@ void matpow(double *x, int n, int k, double *z)
 	    }
 	    if(k == 1)
 		break;
-	    k >>= 1; /* efficient division by 2 ; now have k >= 1 */
+	    k >>= 1; /* efficient division by 2; now have k >= 1 */
 
 	    /* x := x * x */
 	    F77_CALL(dgemm)(transa, transa, &n, &n, &n, &one,
